kubernetes/20-service-registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: service-registry
  namespace: enterprise
spec:
  serviceName: service-registry
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: enterprise/service-registry:latest
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8761
              httpHeaders:
                - name: Authorization
                  value: "Basic ZXVyZWthOmV1cmVrYQ=="
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8761
              httpHeaders:
                - name: Authorization
                  value: "Basic ZXVyZWthOmV1cmVrYQ=="
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: enterprise
spec:
  selector:
    app: service-registry
  ports:
    - name: http
      port: 8761
      targetPort: 8761
  type: ClusterIP
