kubernetes/30-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: enterprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: enterprise/config-server:latest
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8888
              httpHeaders:
                - name: Authorization
                  value: "Basic YWRtaW46YWRtaW4="
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8888
              httpHeaders:
                - name: Authorization
                  value: "Basic YWRtaW46YWRtaW4="
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests: { cpu: 100m, memory: 384Mi }
            limits:   { cpu: 500m, memory: 768Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: enterprise
spec:
  selector:
    app: config-server
  ports:
    - name: http
      port: 8888
      targetPort: 8888
